--- a/Assignment5DJJJ/src/main/resources/templates/login.html
+++ b/Assignment5DJJJ/src/main/resources/templates/login.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/loginstyle.css">
-    <title>Login</title>
+    <title>Document</title>
 </head>
 <body>
-    <center>
-    <h1>Login</h1>
-    <h2 th:if="${message}" th:text="${message}">Invalid username or password.</h2>
-<form th:action="@{/login}" method="post">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" value=""><br><br>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" value=""><br><br>
-  <input type="submit" value="Submit">
-</form> 
-
-<p>Please enter your credentials.</p>
-</center>
-<footer>
-    <p>&copy; 2025 DJJJ. All rights reserved.</p>
-</footer>
+    
 </body>
 </html>
