--- a/Assignment5DJJJ/src/main/resources/templates/login.html
+++ b/Assignment5DJJJ/src/main/resources/templates/login.html
@@ -19,6 +19,8 @@
 </form> 
 
 <p>Please enter your credentials.</p>
+<p>If you aren't registered, please sign up first.</p>
+<a href="/register">Click here to register</a>
 </center>
 <footer>
     <p>&copy; 2025 Joshua Leslie. All rights reserved.</p>
