DJJJ fo life footer

--- a/Assignment5DJJJ/src/main/resources/templates/login.html
+++ b/Assignment5DJJJ/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 <a href="/register">Click here to register</a>
 </center>
 <footer>
-    <p>&copy; 2025 Joshua Leslie. All rights reserved.</p>
+    <p>&copy; 2025 DJJJ. All rights reserved.</p>
 </footer>
 </body>
 </html>
