--- a/Assignment5DJJJ/src/main/resources/templates/login.html
+++ b/Assignment5DJJJ/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 
 <p>Please enter your credentials.</p>
 <p>If you aren't registered, please sign up first.</p>
-<a href="/register">Click here to register</a>
+<a th:href="@{/register}">Click here to register</a>
 </center>
 <footer>
     <p>&copy; 2025 DJJJ. All rights reserved.</p>
