--- a/Assignment5DJJJ/src/main/resources/templates/register.html
+++ b/Assignment5DJJJ/src/main/resources/templates/register.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<html lang="en">
 <head>
-    <title>Register</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <center>
-        <h1> Register</h1>
-        <form th:action="@{/register}" method="post">
-
-            <div class="container">
-                <label><b>Username</b></label>
-                <input type="text" th:placeholder="${usernameError != null} ? ${usernameError} : 'Enter Username'"  name="username" required>
-                <br>
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="password" required>
-                <br>
-                <button type="submit">register</button>
-            </div>
-        </form>
-        <p> Register your deets!</p>
-    </center>
+    
 </body>
-
 </html>
