Never gonna make you cry, never gonna say goodbye

--- a/Assignment5DJJJ/src/main/resources/templates/register.html
+++ b/Assignment5DJJJ/src/main/resources/templates/register.html
@@ -19,6 +19,12 @@
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required>
                 <br>
+                <label for="text"><b>Email</b></label>
+                <input type="email" placeholder="Enter Email" name="email" required>
+                <br>
+                <label for="text"><b>Address</b></label>
+                <input type="address" placeholder="Enter Address" name="address" required>
+                <br>
                 <button type="submit">register</button>
             </div>
         </form>
