--- a/Assignment5DJJJ/src/main/resources/templates/welcome.html
+++ b/Assignment5DJJJ/src/main/resources/templates/welcome.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1 th:text="'Welcome, ' + ${username} + '!'">Welcome!</h1>
-    <p><a th:href="@{/logout}">Log Out</a> through the gift shop.</p>
-    <img src="/images/Designer.jpeg" alt="Construction carton">
+    <p><a th:href="@{/logout}">Log Out</a></p>
     <footer>
     <p>&copy; 2025 DJJJ. All rights reserved.</p>
 </footer>
