--- a/Assignment5DJJJ/src/main/resources/templates/login.html
+++ b/Assignment5DJJJ/src/main/resources/templates/login.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
-    <title>Document</title>
-=======
-    <link rel="stylesheet" href="../login.css">
+    <link rel="stylesheet" href="/css/loginstyle.css">
     <title>Login</title>
->>>>>>> Stashed changes
 </head>
 <body>
-    
+    <center>
+    <h1>Login</h1>
+    <h2 th:if="${message}" th:text="${message}">Invalid username or password.</h2>
+<form th:action="@{/login}" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" value=""><br><br>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" value=""><br><br>
+  <input type="submit" value="Submit">
+</form> 
+
+<p>Please enter your credentials.</p>
+<p>New user? <a th:href="@{/register}">Register here</a></p>
+</center>
+<footer>
+    <p>&copy; 2025 DJJJ. All rights reserved.</p>
+</footer>
 </body>
 </html>
