home added to controller
home css link fixed

--- a/Assignment5DJJJ/src/main/resources/templates/home.html
+++ b/Assignment5DJJJ/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
-  <link href="DJJJ-WebAppProg-Assignment5\Assignment5DJJJ\src\main\resources\static\home.css" rel="stylesheet">
+  <link href="/home.css" rel="stylesheet">
 </head>
 <body>
 <div>
