--- a/Assignment5DJJJ/src/main/resources/templates/welcome.html
+++ b/Assignment5DJJJ/src/main/resources/templates/welcome.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 th:text="'Welcome, ' + ${username} + '!'">Welcome!</h1>
+    <img src="DJJJDesigner.png" alt="DJJJ Designer Logo" width="200">
     <p><a th:href="@{/logout}">Log Out</a></p>
     <footer>
     <p>&copy; 2025 DJJJ. All rights reserved.</p>
