--- a/Assignment5DJJJ/src/main/resources/templates/register.html
+++ b/Assignment5DJJJ/src/main/resources/templates/register.html
@@ -23,6 +23,9 @@
                 <label for="text"><b>Address</b></label>
                 <input type="address" placeholder="Enter Address" name="address" required>
                 <br>
+                <label for="text"><b>Phone Number</b></label>
+                <input type="phoneNumber" placeholder="Enter Phone Number" name="phoneNumber" required>
+                <br>
                 <button type="submit">register</button>
             </div>
         </form>
