--- a/Assignment5DJJJ/src/main/resources/templates/home.html
+++ b/Assignment5DJJJ/src/main/resources/templates/home.html
@@ -10,8 +10,9 @@
 <div>
   <h>DJJJ Enterprises</h>
   <p>Would you like to: </p>
-  <a href="login.html">Login</a>
-  <a href="register.html">Register</a>
+  <a href="/login">Login</a>
+  <br>
+  <a href="/register">Register</a>
 </div>
 </body>
 </html>
