Inside, we both know what's been going on

--- a/Assignment5DJJJ/src/main/resources/templates/welcome.html
+++ b/Assignment5DJJJ/src/main/resources/templates/welcome.html
@@ -92,6 +92,9 @@
             <div class="glow-orb glow-orb-3"></div>
         </div>
     </div>
+    <form th:action="@{/click}" method="post">
+        <button> click me </button>
+    </form>
 
     <footer>
     <p>&copy; 2025 DJJJ. All rights reserved.</p>
