--- a/Assignment5DJJJ/src/main/resources/templates/home.html
+++ b/Assignment5DJJJ/src/main/resources/templates/home.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <div>
+  <img src="DJJJDesigner.png" alt="DJJJ Designer Logo" width="200">
+  <br>
   <h>DJJJ Enterprises</h>
+  <br>
   <p>Would you like to: </p>
   <a href="/login">Login</a>
   <br>
