--- a/Assignment5DJJJ/src/main/resources/static/home.css
+++ b/Assignment5DJJJ/src/main/resources/static/home.css
@@ -10,6 +10,7 @@ div{
     color: white;
     border: 5px solid #666b80;
     text-align: center;
+    border-radius: 5px;
     /* border-color: white;
     border-radius: 10px;
     border-width: solid; */
