--- a/Assignment5DJJJ/src/main/resources/templates/register.html
+++ b/Assignment5DJJJ/src/main/resources/templates/register.html
@@ -4,12 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #333;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        h2 {
+            color: #1E90FF;
+        }
+        form {
+            background-color: #444;
+            padding: 20px;
+            border-radius: 10px;
+            width: 300px;
+            margin: 0 auto;
+        }
+        label {
+            color: #87b3e6;
+        
+        }
+        input[type="email"],
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: none;
+            background-color: #666;
+            color: #fff;
+            border-radius: 5px;
+        }
+        button[type="submit"] {
+            background-color: #1E90FF;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button[type="submit"]:hover {
+            background-color: #83b9e4;
+        }
+        p {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <center>
-        <h1> Register</h1>
         <form th:action="@{/register}" method="post">
-
+            <h1> Register</h1>
             <div class="container">
                 <label><b>Username</b></label>
                 <input type="text" th:placeholder="${usernameError != null} ? ${usernameError} : 'Enter Username'"  name="username" required>
@@ -21,15 +66,13 @@
                 <input type="email" placeholder="Enter Email" name="email" required>
                 <br>
                 <label for="text"><b>Address</b></label>
-                <input type="address" placeholder="Enter Address" name="address" required>
+                <input type="text" placeholder="Enter Address" name="address" required>
                 <br>
                 <label for="text"><b>Phone Number</b></label>
-                <input type="phoneNumber" placeholder="Enter Phone Number" name="phoneNumber" required>
+                <input type="text" placeholder="Enter Phone Number" name="phoneNumber" required>
                 <br>
                 <button type="submit">register</button>
             </div>
         </form>
-        <p> Register your deets!</p>
-    </center>
 </body>
 </html>
